--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,9 +123,11 @@
   }
   
   .post .title span {
-    font-style: italic;
+    /* font-style: italic;
     font-size: 90%;
-    color: #7d7d7d;
+    color: #7d7d7d; */
+    font-size: 90%;
+    color: black;
   }
   
   .edit-link {
