--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -2,7 +2,7 @@
 <div class="title">
   <a href="/post/{{id}}">{{title}}</a>
   <br>
-  <span>{{post_text}}</span>
+  <pre>{{post_text}}</pre>
 </div>
 <div class="meta">
   {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on {{format_date created_at}}
