--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,12 +1,12 @@
-<article class="post">
-<div class="title">
-  <a href="/post/{{id}}">{{title}}</a>
-  <br>
-  <pre>{{post_text}}</pre>
-</div>
-<div class="meta">
-  {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on {{format_date created_at}}
-  |
-  <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
-</div>
+<article class="post message">
+  <div class="message-header is-size-4">
+    <a href="/post/{{id}}">{{title}}</a>
+    <br>
+  </div>
+  <div class="meta message-body">
+    <pre>{{post_text}}</pre>
+    <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+    |
+    {{vote_count}} {{format_plural "point" vote_count}} | written by {{user.username}} on {{format_date created_at}}
+  </div>
 </article>
