updated some UI

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -7,6 +7,7 @@
     <pre>{{post_text}}</pre>
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
     |
-    {{vote_count}} {{format_plural "point" vote_count}} | written by {{user.username}} on {{format_date created_at}}
+    {{vote_count}} {{format_plural "point" vote_count}}
+| written by {{user.username}} on {{format_date created_at}}
   </div>
 </article>
