--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
           <a href="/dashboard" class="navbar-item">dashboard</a>
           <button id="logout" class="btn-no-style navbar-item">logout</button>
           {{else}}
-          <a href="/login" class="navbar-item">login</a>
+          <a href="/login" class="navbar-item">login/signup</a>
           {{/if}}
         </div>
 
@@ -39,6 +39,7 @@
   </div>
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  
   {{/if}}
 </body>
 
